# demo-rust

./: .gitignore  README.md
backend/: Cargo.toml
backend/commons/src/: ResultCode.rs  lib.rs
backend/src/: main.rs
commons/shazam/: models.rs  shazam.rs
frontend/: package.json
parser/: Cargo.toml
parser/src/: main.rs  model.rs
