[package]
name = "backend"
version = "0.1.0"
authors = ["Joword <joword@my.swjtu.edu.cn>"]
edition = "2021"
rust-version = "1.75"
readme = "../README.md"
publish = false
keywords = ['middle platform', 'AI', 'medic']
licence = "Apache 2.0"
build = "build.rs"
exclude = ['icons/*']
repository = "https://github.com/Joword/demo-rust"
description = "a medic AI of platform as a service"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tokio = { version = "^1.39.1", features = ["macros", "rt-multi-thread"] }
warp = "^0.3.7"
mobc = "^0.8.4"
mobc-postgres = { version = "^0.8.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "^1.0.204", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0.204"
commons = { version = "0.1.0", path = "./commons" }

[profiles.dev]
debug = 0

[features]
custom-protocol = ["tauri/custom-protocol"]
